--- a/index.html
+++ b/index.html
@@ -36,7 +36,58 @@
             color: #333;
         }
         /* 残りのCSSルールをここに追加 */
-        
+        /* styles.css */
+body {
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    background: linear-gradient(45deg, #ff9a9e, #fad0c4, #ffecd2);
+    background-size: 400% 400%;
+    animation: gradientBG 15s ease infinite;
+}
+
+@keyframes gradientBG {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
+}
+
+#game-container {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 30px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    text-align: center;
+    max-width: 90%;
+    width: 400px;
+}
+
+#word-display {
+    font-size: 60px;
+    margin: 20px 0;
+    color: #333;
+}
+
+/* 残りのCSSルールをここに追加 */
+
+@media screen and (max-width: 600px) {
+    #game-container {
+        padding: 15px;
+    }
+    #word-display {
+        font-size: 40px;
+    }
+    button {
+        font-size: 16px;
+        padding: 8px 16px;
+    }
+    h1 {
+        font-size: 24px;
+    }
+}
         @media screen and (max-width: 600px) {
             #game-container {
                 padding: 15px;
