--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>楽しい単語遊び！with Mr.Tanaka</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+             font-family: Century, 'Times New Roman', Times, serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            height: 100vh;
             margin: 0;
             background: linear-gradient(45deg, #ff9a9e, #fad0c4, #ffecd2);
             background-size: 400% 400%;
@@ -23,91 +23,59 @@
         }
         #game-container {
             background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
+            padding: 40px;
             border-radius: 30px;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
             text-align: center;
-            max-width: 90%;
-            width: 400px;
         }
         #word-display {
-            font-size: 60px;
+            font-size: 120px;
             margin: 20px 0;
             color: #333;
         }
-        /* 残りのCSSルールをここに追加 */
-        /* styles.css */
-body {
-    font-family: 'Comic Sans MS', cursive, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
-    background: linear-gradient(45deg, #ff9a9e, #fad0c4, #ffecd2);
-    background-size: 400% 400%;
-    animation: gradientBG 15s ease infinite;
-}
-
-@keyframes gradientBG {
-    0% {background-position: 0% 50%;}
-    50% {background-position: 100% 50%;}
-    100% {background-position: 0% 50%;}
-}
-
-#game-container {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 30px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    text-align: center;
-    max-width: 90%;
-    width: 400px;
-}
-
-#word-display {
-    font-size: 60px;
-    margin: 20px 0;
-    color: #333;
-}
-
-/* 残りのCSSルールをここに追加 */
-
-@media screen and (max-width: 600px) {
-    #game-container {
-        padding: 15px;
-    }
-    #word-display {
-        font-size: 40px;
-    }
-    button {
-        font-size: 16px;
-        padding: 8px 16px;
-    }
-    h1 {
-        font-size: 24px;
-    }
-}
-        @media screen and (max-width: 600px) {
-            #game-container {
-                padding: 15px;
-            }
-            #word-display {
-                font-size: 40px;
-            }
-            button {
-                font-size: 16px;
-                padding: 8px 16px;
-            }
-            h1 {
-                font-size: 24px;
-            }
+        #onset, #rime {
+            display: inline-block;
+            margin: 0 10px;
+            padding: 10px;
+            border-radius: 15px;
+            background-color: #fff;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .controls {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 30px;
+        }
+        button {
+            font-size: 24px;
+            padding: 15px 30px;
+            margin: 10px;
+            cursor: pointer;
+            border: none;
+            border-radius: 50px;
+            background-color: #ff6b6b;
+            color: white;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 8px rgba(0,0,0,0.15);
+            background-color: #ff8787;
+        }
+        button:active {
+            transform: translateY(1px);
+        }
+        h1 {
+            color: #444;
+            font-size: 36px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div id="game-container">
-        <h1>楽しい単語遊び！with Mr.Tanaka</h1>
+        <h1>楽しい単語遊び！</h1>
         <div id="word-display">
             <span id="onset"></span>
             <span id="rime"></span>
