--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>楽しい単語遊び！with Mr.Tanaka</title>
+    <title>楽しい単語遊び！</title>
     <style>
         body {
              font-family: Century, 'Times New Roman', Times, serif;
@@ -75,7 +75,7 @@
 </head>
 <body>
     <div id="game-container">
-        <h1>楽しい単語遊び！</h1>
+        <h1>楽しい単語遊び！with Mr.Tanaka</h1>
         <div id="word-display">
             <span id="onset"></span>
             <span id="rime"></span>
