--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>楽しい単語遊び！</title>
     <style>
         body {
-             font-family: Century, 'Times New Roman', Times, serif;
+            font-family: Century, 'Times New Roman', Times, serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             background: linear-gradient(45deg, #ff9a9e, #fad0c4, #ffecd2);
             background-size: 400% 400%;
@@ -23,20 +23,25 @@
         }
         #game-container {
             background-color: rgba(255, 255, 255, 0.8);
-            padding: 40px;
+            padding: 20px;
             border-radius: 30px;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
             text-align: center;
+            max-width: 90%;
+            width: 400px;
         }
         #word-display {
-            font-size: 120px;
+            font-size: 48px;
             margin: 20px 0;
             color: #333;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         #onset, #rime {
             display: inline-block;
-            margin: 0 10px;
-            padding: 10px;
+            margin: 0 5px;
+            padding: 5px;
             border-radius: 15px;
             background-color: #fff;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
@@ -44,12 +49,12 @@
         .controls {
             display: flex;
             justify-content: space-around;
-            margin-top: 30px;
+            margin-top: 20px;
         }
         button {
-            font-size: 24px;
-            padding: 15px 30px;
-            margin: 10px;
+            font-size: 20px;
+            padding: 12px 24px;
+            margin: 8px;
             cursor: pointer;
             border: none;
             border-radius: 50px;
@@ -68,8 +73,25 @@
         }
         h1 {
             color: #444;
-            font-size: 36px;
-            margin-bottom: 20px;
+            font-size: 24px;
+            margin-bottom: 15px;
+        }
+        @media screen and (max-width: 600px) {
+            #game-container {
+                padding: 15px;
+                width: 85%;
+            }
+            #word-display {
+                font-size: 36px;
+            }
+            button {
+                font-size: 18px;
+                padding: 10px 20px;
+                margin: 6px;
+            }
+            h1 {
+                font-size: 22px;
+            }
         }
     </style>
 </head>
